--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
 </head>
 
 <body>
