--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
-  <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,400|Roboto:300,400" rel="stylesheet">
 </head>
 
 <body>
